fix issue where modal causes background to shift

--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -177,6 +177,6 @@
   }
 
   .infinite-carousel-item > img {
-    width: 50px;
+    width: 80%;
   }
 }
